syntax = "proto3";

option go_package = "proto/user_server";

package user_server;

import "message.proto";

message UserIndexRequest {
    string id = 1; //存在1,2,3的情况
    string email = 2;
    string nickname = 3;
    int64 limit = 4;
    int64 page = 5;
}

message UserIndexResponseRecord {
    int64 id = 1;
    string email = 2;
    string nickname = 3;
}


message UserIndexResponse {
    repeated UserIndexResponseRecord record = 1;
    PaginationMeta meta = 2;
}

message UserShowRequest {
    int64 id = 1;
}

message UserShowResponse {
    int64 id = 1;
    string email = 2;
    string nickname = 3;
}

message UserStoreRequest {
    string email = 1;
    string password = 2;
}

message UserStoreResponse {
    string email = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string token = 1;
    string refresh_token = 2;
}

message UserProfileUpdateRequest {
    int64 id = 1;
    string nickname = 2;
    int32 gender = 3;
    string birthday = 4;
}

message UserProfileUpdateResponse {
    int64 id = 1;
    string nickname = 2;
    int32 gender = 3;
    string birthday = 4;
}

message PasswordUpdateRequest {
    string email = 1;
    string old_password = 2;
    string new_password = 3;
}

message PasswordUpdateResponse {
    bool result = 1;
}
